@@ -1,3 +1,6 @@
+* Mon Jan 11 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.0.2
+- Fixed formatting in the metadata.json file.
+
 * Thu Nov 12 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.1-0
 - Update the required version of simp/svckill to the puppet 6 safe version.
 
